prevent models-box of overflowing container

--- a/src/static/css/users/components/models-box.css
+++ b/src/static/css/users/components/models-box.css
@@ -1,3 +1,7 @@
+.models-table {
+    overflow: auto;
+}
+
 th {
   font-size: 1.2em;
   position: relative;
